--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\pedro\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\Users\\pedro\\Documents\\flutter\\flutter_windows_3.13.0-stable\\flutter
+sdk.dir=C:\\Users\\ianom\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\Users\\ianom\\Documents\\flutter\\flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.0
