commit_perfil_novo

--- a/dev_lib/calendar_agenda/example/android/local.properties
+++ b/dev_lib/calendar_agenda/example/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\helen\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\helen\\Documents\\flutter\\flutter
+sdk.dir=C:\\Users\\ianom\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\Users\\ianom\\Documents\\flutter\\flutter
