--- a/dev_lib/calendar_agenda/example/android/local.properties
+++ b/dev_lib/calendar_agenda/example/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\ianom\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\Users\\ianom\\Documents\\flutter\\flutter
+sdk.dir=C:\\Users\\pedro\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\Users\\pedro\\Documents\\flutter\\flutter_windows_3.13.0-stable\\flutter
